Update VI translation

--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -20,8 +20,8 @@
   "Addresses & contacts": "Địa chỉ ví & danh bạ",
   "Advanced feature": "Tính năng nâng cao",
   "Advanced operations": "Tính năng nâng cao",
-  "Advanced options": "Tuỳ chọn nâng cao",
-  "Advanced settings": "Tuỳ chọn nâng cao",
+  "Advanced options": "Quản lý nâng cao",
+  "Advanced settings": "Cài đặt nâng cao",
   "Alephium": "Alephium",
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium hoàn toàn không có quyền truy cập vào ví của bạn.\nBạn là chủ sở hữu duy nhất.",
   "Alephium Logo": "Logo của Alephium",
@@ -48,17 +48,17 @@
   "Back": "Quay lại",
   "between": "giữa",
   "Browse your transaction history. Execute new transfers easily.": "Duyệt qua các lịch sử giao dịch của bạn. Thực hiện các giao dịch một cách dễ dàng.",
-  "By default, the address is generated in a random group. You can select the group you want the address to be generated in using the Advanced options.": "Địa chỉ ví sẽ được mặc định tạo trong một nhóm ngẫu nhiên. Bạn có thể chọn nhóm mong muốn cho địa chỉ ví ở trong phần tuỳ chọn Nâng cao.",
+  "By default, the address is generated in a random group. You can select the group you want the address to be generated in using the Advanced options.": "Địa chỉ ví sẽ được mặc định tạo trong một nhóm ngẫu nhiên. Bạn có thể chọn nhóm mong muốn cho địa chỉ ví ở trong phần Quản lý nâng cao.",
   "Bytecode": "Bytecode",
   "Call contract": "Call contract",
   "Cancel": "Huỷ bỏ",
   "Carefully note down the words! They are your wallet's secret recovery phrase.": "Vui lòng ghi lại cẩn thận cụm từ khôi phục bí mật!",
-  "Change the currency to use to display amounts.": "Change the currency to use to display amounts.",
-  "Change the wallet language.": "Change the wallet language.",
+  "Change the currency to use to display amounts.": "Thay đổi loại tiền tệ để hiển thị giá trị thích hợp.",
+  "Change the wallet language.": "Thay đổi ngôn ngữ hiển thị ví.",
   "Change wallet name": "Thay đổi tên ví",
   "Check": "Kiểm tra",
   "Choose a contact": "Chọn danh bạ",
-  "Click to deactivate discreet mode": "Click to deactivate discreet mode",
+  "Click to deactivate discreet mode": "Nhấn để hiện số dư",
   "Click to see less": "Thu lại",
   "Click to see more": "Xem thêm",
   "Close": "Đóng",
@@ -97,13 +97,13 @@
   "Could not save contact.": "Không thể lưu danh bạ.",
   "Could not save new wallet name.": "Không thể lưu tên ví mới.",
   "Create contacts to avoid mistakes when sending transactions!": "Tạo các danh bạ để tránh nhầm lẫn khi thực hiện các giao dịch!",
-  "Currency": "Currency",
+  "Currency": "Loại tiền tệ",
   "Current dApp connection details": "Chi tiết các kết nối của dApp",
   "Current network": "Mạng hiện tại",
   "Current wallet": "Ví hiện tại",
   "Custom": "Tuỳ chỉnh",
   "Custom network settings saved.": "Tuỳ chỉnh mạng đã lưu.",
-  "Custom proxy (SOCKS5)": "Custom proxy (SOCKS5)",
+  "Custom proxy (SOCKS5)": "Tuỳ chỉnh proxy (SOCKS5)",
   "Dark": "Tối",
   "Default address": "Địa chỉ mặc định",
   "Default address for sending transactions.": "Địa chỉ ví mặc định để thực hiện các giao dịch.",
@@ -111,8 +111,8 @@
   "Deploy contract": "Deploy contract",
   "Description": "Mô tả",
   "Developer tools": "Công cụ dành cho nhà phát triển",
-  "Direction": "Direction",
-  "Directions": "Directions",
+  "Direction": "Bộ lọc",
+  "Directions": "Bộ lọc",
   "Disclaimer": "Disclaimer",
   "Disconnect": "Ngắt kết nối",
   "Discover active addresses": "Tìm các địa chỉ đang hoạt động",
@@ -124,10 +124,10 @@
   "Easily organize your addresses and your contacts for a more serene transfer experience.": "Dễ dàng sắp xếp các địa chỉ ví và danh bạ của bạn để có trải nghiệm giao dịch thuận tiện hơn.",
   "Edit": "Sửa",
   "Edit contact": "Sửa danh bạ",
-  "Enable developer tools": "Kích hoạt developer tools",
-  "Encountered error while calling the faucet.": "Encountered error while calling the faucet.",
+  "Enable developer tools": "Kích hoạt công cụ dành cho nhà phát triển",
+  "Encountered error while calling the faucet.": "Đã xãy ra lỗi khi yêu cầu faucet.",
   "Encountered error while exporting your transactions.": "Đã gặp lỗi khi xuất các giao dịch của bạn.",
-  "Encountered error while synching your addresses' data.": "Đã xảy ra lỗi khi đồng bộ dữ liệu địa chỉ ví của bạn.",
+  "Encountered error while synching your addresses' data.": "Đã xảy ra lỗi khi đang đồng bộ dữ liệu địa chỉ ví của bạn.",
   "Enter": "Đồng ý",
   "Enter password": "Nhập mật khẩu",
   "Enter password for \"{{ switchToWalletName }}\"": "Nhập mật khẩu cho \"{{ switchToWalletName }}\"",
@@ -142,7 +142,7 @@
   "Error while sweeping address {{ from }}": "Lỗi khi đang sweep từ địa chỉ {{ from }}",
   "Everything is ready!": "Tất cả đã sẳn sàng!",
   "Expand": "Mở rộng",
-  "Expected fee": "Phí tuỳ chọn",
+  "Expected fee": "Phí tuỳ chỉnh",
   "Explorer API host": "Explorer API host",
   "Explorer URL": "Explorer URL",
   "Export": "Xuất",
@@ -206,7 +206,7 @@
   "Lock wallet": "Khoá ví",
   "Locked": "Khoá",
   "Locked ALPH balance": "Số dư ALPH đã khoá",
-  "lockTimeConfirmation": "Bạn chọn khoá các tài sản cho đến khi <1>{{ datetime }}</1>. Ước tính trong khoảng <3>{{ inTimeFromNow }}</3> tính từ bây giờ. Bạn có chắc chắn muốn khoá các tài sản đến khi ấy?",
+  "lockTimeConfirmation": "Bạn đã chọn khoá các tài sản cho đến <1>{{ datetime }}</1>. Ước tính trong khoảng <3>{{ inTimeFromNow }}</3> tính từ bây giờ. Bạn có chắc chắn muốn khoá các tài sản đến khi ấy?",
   "Mainnet": "Mainnet",
   "Make sure to always check what is the selected network before sending transactions.": "Hãy chắc chắn rằng bạn đã chọn đúng mạng trước khi thực hiện giao dịch.",
   "Make sure to keep your password secured as it cannot be changed in the future.": "Hãy chắc chắn rằng bạn đã lưu mật khẩu ở nơi an toàn bởi vì nó không thể thay đổi được trong tương lai.",
@@ -271,8 +271,8 @@
   "Raw amount": "Raw amount",
   "Ready!": "Bắt đầu!",
   "Receive": "Nhận",
-  "Receive testnet tokens": "Receive testnet tokens",
-  "Receive testnet tokens in your default address.": "Receive testnet tokens in your default address.",
+  "Receive testnet tokens": "Nhận token testnet",
+  "Receive testnet tokens in your default address.": "Nhận token testnet vào địa chỉ ví mặc định.",
   "Received": "Đã nhận",
   "Recipient's address": "Địa chỉ ví của người nhận",
   "Refresh": "Làm mới",
@@ -288,7 +288,7 @@
   "Review": "Xem lại",
   "Save": "Lưu lại",
   "Scan the blockchain for addresses you used in the past.": "Quét các địa chỉ trên blockchain mà bạn đã sử dụng trước đó.",
-  "Scan this animated QR code with your mobile wallet.": "Scan this animated QR code with your mobile wallet.",
+  "Scan this animated QR code with your mobile wallet.": "Quét mã QR này bằng mobile wallet.",
   "Search": "Tìm kiếm",
   "Search for label, a hash or an asset...": "Tìm theo nhãn, hash hoặc tài sản...",
   "Search for name or a hash...": "Tìm theo tên hoặc hash...",
@@ -304,7 +304,7 @@
   "Select an address to sign with.": "Chọn địa chỉ cần ký.",
   "Select an asset": "Chọn một tài sản",
   "Select assets": "Chọn các tài sản",
-  "Select directions": "Select directions",
+  "Select directions": "Select chọn các bộ lọc",
   "Select group": "Chọn nhóm",
   "Select the address to receive funds to.": "Chọn địa chỉ ví để nhận giao dịch.",
   "Select the address to send funds from.": "Chọn địa chỉ ví nguồn để gửi tài sản.",
@@ -326,7 +326,7 @@
   "Show": "Hiện",
   "Show advanced operations": "Hiện các tính năng nâng cao ",
   "Show advanced options": "Hiện các tuỳ chọn nâng cao",
-  "Show in explorer": "Hiện trong explorer",
+  "Show in explorer": "Hiện trên explorer",
   "Show more": "Hiện thêm",
   "Show QR code": "Hiện mã QR",
   "Show your secret recovery phrase": "Hiện cụm từ khôi phục bí mật",
@@ -347,19 +347,19 @@
   "Tell us!": "Hãy liên hệ với chúng tôi!",
   "Testnet": "Testnet",
   "Testnet faucet": "Testnet faucet",
-  "Testnet tokens incoming.": "Testnet tokens incoming.",
+  "Testnet tokens incoming.": "Token Testnet đang được gửi.",
   "The amount must be greater than {{ minAmount }}": "Số lượng phải lớn hơn hoặc bằng {{ minAmount }}",
   "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "Mạng hiện tại ({{ currentNetwork }}) không trùng khớp với mạng được yêu cầu bởi WalletConnect ({{ walletConnectNetwork }})",
-  "The easiest way to get started with Alephium.": "Các đơn giản nhất để bắt đầu với Alephium",
+  "The easiest way to get started with Alephium.": "Cách đơn giản nhất để bắt đầu với Alephium",
   "The group number will be automatically be appended to the addresses’ label.": "Số nhóm sẽ tự động được thêm vào nhãn của địa ví.",
   "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})": "Nhóm hiện đang được chọn ({{ addressGroup }}) không trùng khớp với nhóm được yêu cầu bởi WalletConnect ({{ walletConnectGroup }})",
-  "The wallet is developed in English.<br />Translations in other languages are provided by the Alephium community.<br />In case of doubt, always refer to the English version.": "The wallet is developed in English.<br />Translations in other languages are provided by the Alephium community.<br />In case of doubt, always refer to the English version.",
+  "The wallet is developed in English.<br />Translations in other languages are provided by the Alephium community.<br />In case of doubt, always refer to the English version.": "Ví được phát triển trên ngôn ngữ Tiếng Anh.<br />Các ngôn ngữ khác được dịch bởi cộng đồng Alephium.<br />Trong trường hợp bạn không chắc chắn, hãy luôn chọn English.",
   "The wallet is offline.": "Ví đang offline.",
   "Theme": "Giao diện",
   "There are no addresses in the required group: {{ group }}": "Không có các địa chỉ ví nào trùng khớp với nhóm: {{ group }}",
   "There are no addresses with available balance. Please, send some funds to one of your addresses, and try again.": "Không có địa chỉ ví nào có đủ số dư. Vui lòng nạp thêm vào tài khoản và thử lại.",
   "There are no available addresses.": "Không có bất kỳ địa chỉ ví nào khả dụng.",
-  "This address is not valid": "Địa chỉ ví nayf không khả dụng",
+  "This address is not valid": "Địa chỉ ví này không khả dụng",
   "This asset cannot have more than {{ decimals }} decimals": "Tài sản này không thể có hơn {{ decimals }} số thập phân",
   "This field is required": "Không được để trống",
   "This is a feature for developers only.": "Tính năng này chỉ dành cho nhà phát triển.",
@@ -390,7 +390,7 @@
   "Type your password to show the phrase.": "Gõ mật khẩu để hiện cụm từ khôi phục.",
   "Type your recovery phrase": "Gõ cụm từ khôi phục bí mật",
   "Unable to convert the amount": "Không thể chuyển đổi số lượng",
-  "Unknown": "Unknown",
+  "Unknown": "Không xác định",
   "Unknown token": "Token không xác định",
   "Unknown tokens": "Các token không xác định",
   "Unknown wallet name": "Tên ví không xác định",
@@ -399,10 +399,10 @@
   "Unlock a wallet to continue.": "Đăng nhập vào một ví để tiếp tục.",
   "Unlock your wallet to connect to dApp: {{ dAppName }}": "Đăng nhập vào ví của bạn để kết nối đến dApp: {{ dAppName }}",
   "Unlock your wallet to continue.": "Đăng nhập vào ví của bạn để tiếp tục.",
-  "Unlocked at": "Đã khoá tại",
-  "Unlocks at": "Mở khoá tại",
+  "Unlocked at": "Đã mở khoá vào",
+  "Unlocks at": "Mở khoá vào",
   "Unselect all": "Bỏ chọn tất cả",
-  "Unverified": "Unverified",
+  "Unverified": "Chưa được xác nhận",
   "Update": "Cập nhật",
   "Use an existing wallet": "Sử dụng ví đã có sẳn",
   "Use max amount": "Sử dụng tất cả số dư",
@@ -427,7 +427,7 @@
   "welcomeScreenOneAddressPerGroupMessage": "Người dùng nâng cao: Bạn muốn bắt đầu với <1>một địa chỉ ví trên nhóm dành cho thợ đào hoặc DeFi?</1>",
   "welcomeScreenPassphraseMessage": "Nếu bạn muốn sử dụng một <1>passphrase</1>, khoá ví vừa mới tạo.",
   "with": "cùng",
-  "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.": "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.",
+  "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.": "Bạn hiện đang kết nối vào mạng {{ currentNetwork }}. Hãy chắc chắn rằng bạn đã kết nối vào testnet để nhìn thấy các token.",
   "You can disable this confirmation step from the wallet settings.": "Bạn có thể tắt bước xác nhận này trong cài đặt ví.",
   "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "Bạn có thể tải về lịch sử các giao dịch của địa chỉ ví trong một khoản thời gian đã chọn. Tính năng này có thể hữu ích trong báo cáo thuế.",
   "You have great ideas you want to share?": "Bạn muốn đóng góp ý tưởng cho chúng tôi?",
@@ -441,15 +441,15 @@
   "Your Wallet": "Ví của bạn",
   "{{ amount }} ALPH are added for UTXO spam prevention. Click here to know more.": "{{ amount }} ALPH are added for UTXO spam prevention. Click here to know more.",
   "Address unknown tokens": "Address unknown tokens",
-  "Experimental": "Experimental",
+  "Experimental": "Đang thử nghiệm",
   "Public key": "Public key",
   "Private key": "Private key",
   "Address keys export": "Address keys export",
-  "Public key copied.": "Public key copied.",
+  "Public key copied.": "Đã sao chép public key.",
   "Could not copy public key.": "Could not copy public key.",
   "Copy the keys of an address.": "Copy the keys of an address.",
   "Transaction hash": "Transaction hash",
-  "Copy hash": "Copy hash",
-  "Sign": "Sign",
+  "Copy hash": "Sao chép hash",
+  "Sign": "Ký",
   "Unsigned transaction signed!": "Unsigned transaction signed!"
 }
