Correct some contexts to avoid confusion

--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -19,8 +19,8 @@
   "Addresses": "Địa chỉ ví",
   "Addresses & contacts": "Địa chỉ ví & danh bạ",
   "Advanced feature": "Tính năng nâng cao",
-  "Advanced operations": "Tính năng nâng cao",
-  "Advanced options": "Quản lý nâng cao",
+  "Advanced operations": "Quản lý nâng cao",
+  "Advanced options": "Tuỳ chọn nâng cao",
   "Advanced settings": "Cài đặt nâng cao",
   "Alephium": "Alephium",
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium hoàn toàn không có quyền truy cập vào ví của bạn.\nBạn là chủ sở hữu duy nhất.",
@@ -48,7 +48,7 @@
   "Back": "Quay lại",
   "between": "giữa",
   "Browse your transaction history. Execute new transfers easily.": "Duyệt qua các lịch sử giao dịch của bạn. Thực hiện các giao dịch một cách dễ dàng.",
-  "By default, the address is generated in a random group. You can select the group you want the address to be generated in using the Advanced options.": "Địa chỉ ví sẽ được mặc định tạo trong một nhóm ngẫu nhiên. Bạn có thể chọn nhóm mong muốn cho địa chỉ ví ở trong phần Quản lý nâng cao.",
+  "By default, the address is generated in a random group. You can select the group you want the address to be generated in using the Advanced options.": "Địa chỉ ví sẽ được mặc định tạo trong một nhóm ngẫu nhiên. Bạn có thể chọn nhóm mong muốn cho địa chỉ ví ở trong phần Tuỳ chọn nâng cao.",
   "Bytecode": "Bytecode",
   "Call contract": "Call contract",
   "Cancel": "Huỷ bỏ",
@@ -103,7 +103,7 @@
   "Current wallet": "Ví hiện tại",
   "Custom": "Tuỳ chỉnh",
   "Custom network settings saved.": "Tuỳ chỉnh mạng đã lưu.",
-  "Custom proxy (SOCKS5)": "Tuỳ chỉnh proxy (SOCKS5)",
+  "Custom proxy (SOCKS5)": "Custom proxy (SOCKS5)",
   "Dark": "Tối",
   "Default address": "Địa chỉ mặc định",
   "Default address for sending transactions.": "Địa chỉ ví mặc định để thực hiện các giao dịch.",
@@ -265,14 +265,14 @@
   "Please, backup your secret phrase instead.": "Xin hãy sao lưu cụm từ khôi phục bí mật.",
   "Please, generate a new address in group {{ group }} first.": "Trước tiên, xin hãy tạo một địa chỉ ví trong nhóm {{ group }}.",
   "Previous year": "Năm ngoái",
-  "Private key copied.": "Khoá cá nhân đã sao chép.",
+  "Private key copied.": "Private key copied.",
   "Proxy address": "Proxy address",
   "Proxy port": "Proxy port",
   "Raw amount": "Raw amount",
   "Ready!": "Bắt đầu!",
   "Receive": "Nhận",
-  "Receive testnet tokens": "Nhận token testnet",
-  "Receive testnet tokens in your default address.": "Nhận token testnet vào địa chỉ ví mặc định.",
+  "Receive testnet tokens": "Receive testnet tokens",
+  "Receive testnet tokens in your default address.": "Receive testnet tokens in your default address.",
   "Received": "Đã nhận",
   "Recipient's address": "Địa chỉ ví của người nhận",
   "Refresh": "Làm mới",
@@ -317,7 +317,7 @@
   "Send locked assets": "Gửi các tài sản bị khoá",
   "Sent": "Đã gửi",
   "Set as the default address": "Đặt làm địa chỉ ví mặc định",
-  "Set custom network URLs": "Đặt các mạng URL tuỳ chỉnh",
+  "Set custom network URLs": "Set custom network URLs",
   "Set gas and lock time": "Đặt gas và thời gian khoá",
   "Set gas settings": "Đặt tuỳ chỉnh gas",
   "Set lock time": "Đặt thời gian khoá",
@@ -427,7 +427,7 @@
   "welcomeScreenOneAddressPerGroupMessage": "Người dùng nâng cao: Bạn muốn bắt đầu với <1>một địa chỉ ví trên nhóm dành cho thợ đào hoặc DeFi?</1>",
   "welcomeScreenPassphraseMessage": "Nếu bạn muốn sử dụng một <1>passphrase</1>, khoá ví vừa mới tạo.",
   "with": "cùng",
-  "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.": "Bạn hiện đang kết nối vào mạng {{ currentNetwork }}. Hãy chắc chắn rằng bạn đã kết nối vào testnet để nhìn thấy các token.",
+  "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.": "Bạn hiện đang kết nối vào mạng {{ currentNetwork }}. Hãy chắc chắn rằng bạn đã kết nối vào mạng testnet để nhìn thấy các token.",
   "You can disable this confirmation step from the wallet settings.": "Bạn có thể tắt bước xác nhận này trong cài đặt ví.",
   "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "Bạn có thể tải về lịch sử các giao dịch của địa chỉ ví trong một khoản thời gian đã chọn. Tính năng này có thể hữu ích trong báo cáo thuế.",
   "You have great ideas you want to share?": "Bạn muốn đóng góp ý tưởng cho chúng tôi?",
@@ -441,15 +441,15 @@
   "Your Wallet": "Ví của bạn",
   "{{ amount }} ALPH are added for UTXO spam prevention. Click here to know more.": "{{ amount }} ALPH are added for UTXO spam prevention. Click here to know more.",
   "Address unknown tokens": "Address unknown tokens",
-  "Experimental": "Đang thử nghiệm",
+  "Experimental": "Experimental",
   "Public key": "Public key",
   "Private key": "Private key",
   "Address keys export": "Address keys export",
-  "Public key copied.": "Đã sao chép public key.",
+  "Public key copied.": "Public key copied.",
   "Could not copy public key.": "Could not copy public key.",
   "Copy the keys of an address.": "Copy the keys of an address.",
   "Transaction hash": "Transaction hash",
-  "Copy hash": "Sao chép hash",
-  "Sign": "Ký",
+  "Copy hash": "Copy hash",
+  "Sign": "Sign",
   "Unsigned transaction signed!": "Unsigned transaction signed!"
 }
