--- a/locales/id-ID/translation.json
+++ b/locales/id-ID/translation.json
@@ -451,5 +451,11 @@
   "Transaction hash": "Hash transaksi",
   "Copy hash": "Salin hash",
   "Sign": "Tanda tangan",
-  "Unsigned transaction signed!": "Transaksi yang belum ditandatangani telah ditandatangani!"
+  "Unsigned transaction signed!": "Transaksi yang belum ditandatangani telah ditandatangani!",
+  "Origin": "Origin",
+  "Destination": "Destination",
+  "One of your addresses to send the transaction from.": "One of your addresses to send the transaction from.",
+  "The address which will receive the transaction.": "The address which will receive the transaction.",
+  "Select the address to send funds to.": "Select the address to send funds to.",
+  "QR code scanner": "QR code scanner"
 }
