--- a/locales/ru-RU/translation.json
+++ b/locales/ru-RU/translation.json
@@ -451,5 +451,11 @@
   "Transaction hash": "Хэш транзакции",
   "Copy hash": "Копировать хэш",
   "Sign": "Подписать",
-  "Unsigned transaction signed!": "Неподписанная транзакция подписана!"
+  "Unsigned transaction signed!": "Неподписанная транзакция подписана!",
+  "Origin": "Origin",
+  "Destination": "Destination",
+  "One of your addresses to send the transaction from.": "One of your addresses to send the transaction from.",
+  "The address which will receive the transaction.": "The address which will receive the transaction.",
+  "Select the address to send funds to.": "Select the address to send funds to.",
+  "QR code scanner": "QR code scanner"
 }
